tests/fixtures/compile_errors/numeric_capacity_mismatch/u128_neg.fe
contract Foo:
    pub def bar() -> u128:
        return u128(-1)